# modelspt

./: detect.py  export.py  hubconf.py  pyproject.toml  train.py  val.py
data/aeroplane/: README.dataset.txt  README.roboflow.txt  data.yaml
data/aeroplane/test/labels/: Airplane019_jpg.rf.2801954d6f6469e0bdcdf381419f6a78.txt  Airplane058_jpg.rf.7622060fea3abda08fb91f3586eb21bc.txt  Airplane077_jpg.rf.8ed2aa1b378550a1dfd42ff0fe9e3b9a.txt  Airplane081_jpg.rf.71b8b21219c6885668c7bca28b4e6a5d.txt  Airplane084_jpg.rf.0d4a83e2215de4179495a65ed44e0b8f.txt  Airplane101_jpg.rf.c12eee85362de7f0323d12c33d4bb87a.txt  Airplane110_jpg.rf.91ae7846bd1308bfebf5c0b41b73fe6f.txt  Airplane249_jpg.rf.0de55a1014510d14e4f2a4459f1707a7.txt  Airplane281_jpg.rf.fc94bdb675d149dc93dd22b6b2bf2945.txt
data/aeroplane/train/labels/: Airplane002_jpg.rf.1d071d83f8d5aace0306fdef7ee05aa9.txt  Airplane002_jpg.rf.58d1cf95d8f86cd1ec0ba531e8010dde.txt  Airplane002_jpg.rf.cff44944e9000b6ec136432052be9ae4.txt  Airplane003_jpg.rf.2d2b2b0cb24a0cbcb1e09472144d2a35.txt  Airplane003_jpg.rf.3063a7e9cef6625390db1dc0325edc45.txt  Airplane003_jpg.rf.aa3257181010dbe8728df7df69214f18.txt  Airplane006_jpg.rf.798af7f02fd1f52aaaa892b8829f2ce2.txt  Airplane006_jpg.rf.a72a6a61ba036f5f4cdcd97fb2ceec91.txt  Airplane006_jpg.rf.abff7cc44bd15881f72c5085c654c7a5.txt  Airplane012_jpg.rf.4f2d909314a4c597329514583c42281e.txt  Airplane012_jpg.rf.c71631d9dfe4e2c841693c75ca69fb73.txt  Airplane012_jpg.rf.c7e49d130a98b24e777e6c37c7d0930c.txt  Airplane017_jpg.rf.01b3ebc1d0f31d887adecd04909e193a.txt  Airplane017_jpg.rf.50051c8c9ed86894ce80d36e5345be95.txt  Airplane017_jpg.rf.aaa9b30e21c866a3c15eb6980244deb5.txt  Airplane018_jpg.rf.ef61412e2ccf7ed48e77a6d9dd36b3b4.txt  Airplane018_jpg.rf.f30b5989465ab660029d3cd7ea17b18c.txt  Airplane018_jpg.rf.fb4fa10202d9ec186f4e24b5efe41943.txt  Airplane024_jpg.rf.178f776e7e714fc2722a3a7b463e9012.txt  Airplane024_jpg.rf.53808b84683da76743f5430692f9e17e.txt  Airplane024_jpg.rf.9cba7fdea8a7c0be69066075126e9ff5.txt  Airplane025_jpg.rf.403b7ae100fbd979ffead92d4102f079.txt  Airplane025_jpg.rf.a575c5db3663ed9dd5fe9700d5428ce0.txt  Airplane025_jpg.rf.ac351133eb1932ae465a296f6e8571da.txt  Airplane027_jpg.rf.108f88c93b3629493c1c2fc8dfe88015.txt  Airplane027_jpg.rf.6fd7f40e4300af26a6b1b63441fd4f30.txt  Airplane027_jpg.rf.c88e9e6f646bd13e5c613a1b09169e37.txt  Airplane031_jpg.rf.3d4cc7214df5cc07befb6a701d211cc9.txt  Airplane031_jpg.rf.5223651417f2918278312926863ae3b6.txt  Airplane031_jpg.rf.aea96f066dc8d513e8be88246feb929d.txt  Airplane061_jpg.rf.0571bc148e319f9c345243f3408b3916.txt  Airplane061_jpg.rf.399df4c39936e48d307273b289e04659.txt  Airplane061_jpg.rf.b145f85a32e7cd294a2947257b4c6cae.txt  Airplane067_jpg.rf.0268c866b0dbe174458ced405976dae1.txt  Airplane067_jpg.rf.26cda5b684c97fde54c8ad91759ebd00.txt  Airplane067_jpg.rf.7498f52097c8479b9ba80dea4b6a0f79.txt  Airplane082_jpg.rf.26a52b7db18afd679223d18a10ef5c93.txt  Airplane082_jpg.rf.315b850e607f8897f6240f8f60b8cd1d.txt  Airplane082_jpg.rf.f09fe9e025668530aef65e53a4eb7d75.txt  Airplane099_jpg.rf.8d65a7808770ad35a1090c4f078429b7.txt  (+53 more)
data/aeroplane/valid/labels/: Airplane001_jpg.rf.bd7ddcf07a96dcea200ef9647c463771.txt  Airplane004_jpg.rf.c1e3e6b90084673dffc08103e9ea5535.txt  Airplane005_jpg.rf.e4ae70db58f1d35181395c74f2d23d9c.txt  Airplane008_jpg.rf.98e7c31be1dfe9531d101badf420867b.txt  Airplane011_jpg.rf.c0539cc53b77894cc64095a0c3128c1c.txt  Airplane044_jpg.rf.95671c7d1c7a1346c236bdd44362a68d.txt  Airplane118_jpg.rf.c17f2edb51888ee589e4a86ede1b5564.txt  Airplane127_jpg.rf.80cb195c0687737fd0051311fbef2f7c.txt  Airplane192_jpg.rf.92157b61b5691cbf0627a6f169fd7d92.txt  Airplane240_jpg.rf.84cf8dfa998ed6dcfda052c66f97778d.txt  Airplane302_jpg.rf.9e601149ed5739295bb7aa4108c1e725.txt  Airplane319_jpg.rf.72ac6135171ad306f289072e548db5da.txt  Airplane324_jpg.rf.6102252e5099bd1e2d7c85c4942b36a6.txt  Airplane354_jpg.rf.1153b962baa4396b207a05c93167bee4.txt  (+1 more)
data/birds/: README.dataset.txt  README.roboflow.txt  data.yaml
data/birds/valid/: labels.cache
data/drone/drone/: README.dataset.txt  README.roboflow.txt  data.yaml
(+3198 files in other folders)
